# Allocators

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  linear_allocator.c  linear_allocator.h  tools.h
dependencies/: utest.h
include/: linear_allocator.h  pch.h  pool_allocator.h  tools.h
include/details/: stack_linked_list.h  tools.h
sources/: linear_allocator.c  pch.c  pool_allocator.c  tools.c
sources/details/: stack_linked_list.c
tests/: CMakeLists.txt  linear_allocator_test.c  stack_linked_list_test.c  tools_test.c
